--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,14 @@ td {
 	text-align: center;
 	font-family:"Erbos Draco Open NBP Regular";
 	color: yellow;
+
+	/* disable text selection */
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: moz-none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .p {
