Changed px to % in CSS

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@ body {
 
 
 .grid {
-    width:1400px;
-    height:300px;
+    width:90%;
+    height:30%;
     position:absolute;
     left:20%;
     top:50%;
@@ -52,9 +52,6 @@ input[type=radio]:hover + label:hover {
 input[type=radio]:checked + label { 
     background-color: yellow;
 }
-/**/
-
-
 
 
 input[type="text"], textarea {
@@ -117,8 +114,6 @@ p {
 
 </style>
 </head>
-
-
 <body>
 <div class="grid">
 	<form>
