moved index.html to the root

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-
-
-
 <html>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="javascripts/tennis_game.js"></script>
+	<script src="public/javascripts/tennis_game.js"></script>
 	<title>Tennis Score</title>
 <style>
 body {
@@ -13,7 +10,7 @@ body {
 	background-color: black;
 
 	}
-@font-face {font-family:"Erbos Draco Open NBP Regular";src:url("erbos_draco_open_nbp.eot?") format("eot"),url("erbos_draco_open_nbp.woff") format("woff"),url("erbos_draco_open_nbp.ttf") format("truetype"),url("erbos_draco_open_nbp.svg#Erbos-Draco-Open-NBP") format("svg");font-weight:normal;font-style:normal;}
+@font-face {font-family:"Erbos Draco Open NBP Regular";src:url("public/erbos_draco_open_nbp.eot?") format("eot"),url("public/erbos_draco_open_nbp.woff") format("woff"),url("public/erbos_draco_open_nbp.ttf") format("truetype"),url("public/erbos_draco_open_nbp.svg#Erbos-Draco-Open-NBP") format("svg");font-weight:normal;font-style:normal;}
 
 
 
